--- a/sts.html
+++ b/sts.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
     簡繁秘書 Simplotraditionl Secretary
     
@@ -7,7 +7,7 @@
     @Author         Blankego(有女同車) <blankego(at)163.com>
     @Author         Danny Lin <danny.0838(at)gmail.com>
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw" lang="zh-tw" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-tw" xml:lang="zh-tw" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>簡繁秘書 Simplotraditionl Secretary v1.1.2</title>
@@ -17,7 +17,7 @@
 <script src="t2s.js" type="text/javascript"></script>
 <script src="t2sp.js" type="text/javascript"></script>
 <script type="text/javascript">
-<!--
+//<![CDATA[
 /**
  * main program
  */
@@ -497,9 +497,10 @@ function getOffsetY(field) {
     }
     return offset;
 }
-//-->
+//]]>
 </script>
 <style type="text/css">
+/*<![CDATA[*/
 li {
     line-height: 1.5em;
 }
@@ -601,6 +602,7 @@ b:focus {
     background-color: #FFFF99;
     margin: 2px;
 }
+//]]>
 </style>
 </head>
 
