--- a/sts.html
+++ b/sts.html
@@ -617,8 +617,8 @@ b:focus {
             <option value="1">繁->簡</option>
         </select>
         <select id="mode" size="1">
-            <option value="0">校對模式(含單選)</option>
-            <option value="1" selected="selected">校對模式</option>
+            <option value="0" selected="selected">校對模式(含單選)</option>
+            <option value="1">校對模式</option>
             <option value="2">純文字模式(含單選)</option>
             <option value="3">純文字模式</option>
         </select>
