--- a/sts.html
+++ b/sts.html
@@ -641,6 +641,16 @@ b:focus {
 <hr/>
     <h2>操作說明</h2>
     <p>在輸入區貼上欲轉換的簡化字文本，點擊 [轉換]，此時初步轉換的文本將顯示於藍框内的校對區，可用操作鍵進行校對處理，完成後點擊 [完成] 移除特殊格式（或直接複製亦可）。</p>
+    <p>如果游標跑掉，操作鍵按了沒有反應，請點擊任一已上色的字，即可繼續用操作鍵操作</p>
+
+    <h2>校對模式上色說明</h2>
+    <ul>
+        <li>黃色：待校字。還沒校對過的字。</li>
+        <li>藍色：已審字。已經校對過但沒有修改的字。</li>
+        <li>綠色：已選字。校對過也修改過的字。</li>
+        <li>紫色：唯一字。唯一選項，只能用滑鼠選取，只能按 0 改為原始字或按 ` 自訂內容。</li>
+        <li>紅色：編輯中。按 ` 切換成可編輯模式的狀態。</li>
+    </ul>
 
     <h2>操作鍵</h2>
     <ul>
